--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "html-webpack-plugin": "^2.24.1",
     "webpack": "^1.13.3",
